# company_catalog_api

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini  test_runner.sh
alembic/: env.py
alembic/versions/: 6d78d6ff8c7f_migration.py  9d97126e2889_initial_tables_with_relationships_and_.py
src/: main.py  seed.py
src/api/: organization.py
src/config/: db.py  logger.py  settings.py
src/crud/: base.py  organization.py
src/models/: __init__.py  activity.py  associations.py  building.py  organization.py  phone.py
src/schemas/: activity.py  building.py  organization.py  phone.py
src/utils/: geo.py  security.py
tests/: conftest.py  test_api_organization.py  test_crud_organization.py
