[project]
name = "company-catalog-api"
version = "0.1.0"
description = ""
authors = [
    {name = "AleksandrZaec",email = "zaecam95@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy[asyncio] (>=2.0.42,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "geoalchemy2 (>=0.18.0,<0.19.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "faker (>=37.5.3,<38.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-dotenv (>=0.5.2,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"
pytest-asyncio = "^1.1.0"

